src/test/testFiles/invalid/semanticErrors/methodCallOnPrimitiveType.val
let x: number = 2;
x.hello(2);